<resources>
    <string name="app_name">Marinara</string>
    <string name="action_settings">Settings</string>


    <!-- TimerActivity strings -->
    <string name="manage_tasks_menu_item_title">Manage Tasks</string>

    <!--###################### Preferences strings ############################-->
    <!-- titles & summaries -->
    <string name="break_preferences_title">Breaks</string>
    <string name="auto_start_break_title">Start Break Automatically</string>
    <string name="skip_break_title">Skip Breaks</string>
    <string name="break_duration_title">Break Session Duration</string>
    <string name="auto_start_break_summary">initiate break countdown as soon as pomodoro session ends</string>
    <string name="skip_break_summary">reset pomodoro session when current session ends </string>

    <string name="long_break_preferences_title">Long Breaks</string>
    <string name="long_break_duration_title">Long Break Duration</string>
    <string name="sessions_to_long_break_title">Sessions To Long Break</string>
    <string name="sessions_to_long_break_summary">number of pomodoro sessiosn before long break</string>


    <string name="pomodoro_session_preferences_title">Pomodoro Sessions</string>
    <string name="pausing_pomodoro_session_title">Allow Pausing Pomodoro Sessions </string>
    <string name="pomodoro_duration_title">Pomodoro Session Duration</string>
    <string name="pausing_pomodoro_session_summary">pause current pomodoro session indefinitely</string>
    <string name="auto_start_next_session_title">Auto Start Next Pomodoro Session</string>
    <string name="auto_start_next_session_summary">next session countdown starts right after current session/break</string>

    <!-- preference key names -->
    <string name="break_session_millisec">break_session_millisec</string>
    <string name="auto_start_break">auto_start_break</string>
    <string name="skip_break">skip_break</string>
    <string name="pomodoro_session_millisec">pomodoro_session_millisec</string>
    <string name="allow_pause_session">pause_pomodoro_session</string>
    <string name="selected_task_id">selected_task_id</string>
    <string name="auto_start_next_session">auto_start_pomodoro_session</string>
    <string name="long_break_millisec">long_break_session_millisec</string>
    <string name="sessions_to_long_break">sessions_to_long_break</string>




    <string name="title_activity_break">Break</string>

    <!-- ManageTasksActivity -->
    <string name="title_activity_manage_tasks">@string/manage_tasks_menu_item_title</string>
    <string name="add_task_button_text">Add Task </string>

    <!-- NewTaskDialogActivity -->
    <string name="title_activity_new_task_dialog">Create New Task</string>
    <string name="task_dialog_edit_text_hint">task name</string>
    <string name="task_dialog_ok_button_text">Ok</string>

    <!-- SettingsActivity -->
    <string name="title_activity_settings">Settings</string>

    <!-- StatsActivity -->
    <string name="title_activity_stats">Stats</string>
    <string name="selected_time_interval_text">Time Period:</string>
    <string name="today_string">Today</string>
    <string name="this_week_string">This Week</string>
    <string name="this_month_string">This Month</string>
    <string-array name="time_intervals_array">
        <item>@string/today_string</item>
        <item>@string/this_week_string</item>
        <item>@string/this_month_string</item>
    </string-array>
    <string name="line_chart_description">sessions per day</string>
    <string name="pie_chart_description">sessions per task</string>

    <!-- Image licensing strings -->
    <string name="timer_images_desc"><![CDATA[<div>timer button images are modified version of the
        <a href="https://www.iconfinder.com/iconsets/audio-sound-and-video">Audio, sound and video</a> icon set</div>]]></string>
    <string name="timer_images_author"><![CDATA[<a href="https://www.iconfinder.com/danieledesantis"> Daniele De Santis </a>]]></string>
    <string name="timer_images_license"><![CDATA[<a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons (Attribution 3.0 Unported)</a>]]></string>

    <string name="add_task_desc"><![CDATA[<div>the add task icon is part of the
        <a href="https://www.iconfinder.com/iconsets/ui-navigation-1"> UI Navigation </a> icon set</div>]]></string>
    <string name="add_task_author"><![CDATA[<a href="https://www.iconfinder.com/tintin099">Rawnly</a>]]></string>
    <string name="add_task_license"><![CDATA[<a href="http://creativecommons.org/licenses/by/2.5/">Creative Commons (Attribution 2.5 Generic)</a>]]></string>

    <string name="trash_icon_desc"><![CDATA[<div>trash icon is part of the <a href="https://www.iconfinder.com/iconsets/linecon">Linecon</a> icon set</div>]]></string>
    <string name="trash_icon_author"><![CDATA[<a href="https://www.iconfinder.com/setu">W3 Creative Lab</a>]]></string>
    <string name="trash_icon_license"><![CDATA[<a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons (Attribution 3.0 Unported)</a>]]></string>

    <!-- licensing list item fields -->
    <string name="description_label_text">Description:</string>
    <string name="author_label_text">Author:</string>
    <string name="license_label_text">License:</string>

    <!-- ImageLicensesActivity -->
    <string name="title_activity_image_licenses">Image Licenses</string>

    <!-- AboutInfoActivity strings -->
    <string name="title_activity_about_info">AboutInfoActivity</string>
    <string name="version_text">Version</string>
    <string name="image_license_text">Image Licenses</string>
    <string-array name="about_array">
        <item>@string/image_license_text</item>
    </string-array>





</resources>
